--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.0.2",
         "barryvdh/laravel-debugbar": "^3.7",
         "filament/filament": "^3.0-stable",
+        "flowframe/laravel-trend": "^0.1.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
